--- a/client/index.html
+++ b/client/index.html
@@ -12,11 +12,48 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
+				<div id="github-profiles">
+				</div>
 			</div>
 		</div>
 	</div>
 
 	<script type="text/babel">
+		var Profile = React.createClass({
+			render: function() {
+				return(
+					<div>
+						<UserInfo />
+						<Repos />
+					</div>
+				)
+			}
+		});
+
+		var UserInfo = React.createClass({
+			render: function() {
+				return(
+					<div>
+						USERINFO
+					</div>
+				)
+			}
+		});
+
+		var Repos = React.createClass({
+			render: function() {
+				return(
+					<div>
+						REPOS
+					</div>
+				)
+			}
+		});
+
+		ReactDOM.render(
+			<Profile />,
+			document.getElementById('github-profiles')
+		);
 
 	</script>
 </body>
