--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
 	<script src="https://fb.me/react-0.14.0.js"></script>
 	<script src="https://fb.me/react-dom-0.14.0.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.25/browser.min.js"></script>
+	<script type="text/javascript" src="config.js"></script>
 </head>
 <body>
 	<div class="container">
@@ -17,6 +18,7 @@
 			</div>
 		</div>
 	</div>
+
 
 	<script type="text/babel">
 		var Profile = React.createClass({
