Gets user data for hard-coded username

--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,45 @@
 
 	<script type="text/babel">
 		var Profile = React.createClass({
+			getDefaultProps: function() {
+				return {
+					clientId: config.MY_KEY,
+					clientSecret:config.SECRET_KEY,
+					urls: {
+						user: 'https://api.github.com/users'
+					},
+					perPage: 5
+				}
+			},
+			getInitialState: function() {
+				return {
+					username: 'fgarbagnati',
+					userData: [],
+					repoData: []
+				}
+			},
+			loadUserData: function() {
+				$.ajax({
+					url: this.props.urls.user + '/' + this.state.username + '?client_id=' + this.props.clientId + '&client_secret=' + this.props.clientSecret,
+					dataType: 'json',
+					cache: false,
+					success: function(data) {
+						console.log(data);
+						this.setState({userData: data});
+					}.bind(this),
+					error: function(xhr, status, err) {
+						this.setState({username: null});
+						alert(err);
+					}.bind(this)
+				})
+			},
+			loadRepoData: function() {
+
+			},
+			componentDidMount: function() {
+				this.loadUserData();
+				this.loadRepoData();
+			},
 			render: function() {
 				return(
 					<div>
