--- a/client/index.html
+++ b/client/index.html
@@ -64,7 +64,7 @@
 			render: function() {
 				return(
 					<div>
-						<UserInfo />
+						<UserInfo userData={this.state.userData}/>
 						<Repos />
 					</div>
 				)
@@ -75,7 +75,14 @@
 			render: function() {
 				return(
 					<div>
-						USERINFO
+						<div className="row">
+							<div className="col-md-4">
+								<img className="thumbnail" style={{width: "100%"}} src={this.props.userData.avatar_url} />
+							</div>
+							
+							<div className="col-md-8">
+							</div>
+						</div>
 					</div>
 				)
 			}
