--- a/client/index.html
+++ b/client/index.html
@@ -3,17 +3,12 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/style.css">
 	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script src="https://fb.me/react-0.14.0.js"></script>
 	<script src="https://fb.me/react-dom-0.14.0.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.25/browser.min.js"></script>
 	<script type="text/javascript" src="config.js"></script>
-	<style>
-		body {
-			margin-top: 30px;
-		}
-		.label { margin-right: 10px; }
-	</style>
 </head>
 <body>
 	<div class="container">
