--- a/client/index.html
+++ b/client/index.html
@@ -53,10 +53,22 @@
 						this.setState({username: null});
 						alert(err);
 					}.bind(this)
-				})
+				});
 			},
 			loadRepoData: function() {
-
+				$.ajax({
+					url: this.props.urls.user + '/' + this.state.username + '/repos?per_page=' + this.props.perPage + 'client_id=' + this.props.clientId + '&client_secret=' + this.props.clientSecret + '&sort=created',
+					dataType: 'json',
+					cache: false,
+					success: function(data) {
+						console.log(data);
+						this.setState({repoData: data});
+					}.bind(this),
+					error: function(xhr, status, err) {
+						this.setState({username: null});
+						alert(err);
+					}.bind(this)
+				});
 			},
 			componentDidMount: function() {
 				this.loadUserData();
