--- a/client/index.html
+++ b/client/index.html
@@ -46,7 +46,6 @@
 					dataType: 'json',
 					cache: false,
 					success: function(data) {
-						console.log(data);
 						this.setState({userData: data});
 					}.bind(this),
 					error: function(xhr, status, err) {
@@ -61,7 +60,6 @@
 					dataType: 'json',
 					cache: false,
 					success: function(data) {
-						console.log(data);
 						this.setState({repoData: data});
 					}.bind(this),
 					error: function(xhr, status, err) {
@@ -78,7 +76,7 @@
 				return(
 					<div>
 						<UserInfo userData={this.state.userData}/>
-						<Repos />
+						<Repos repoData={this.state.repoData}/>
 					</div>
 				)
 			}
@@ -122,9 +120,26 @@
 
 		var Repos = React.createClass({
 			render: function() {
+				var repoNodes = this.props.repoData.map(function(repo, index) {
+					return(
+						<Repo name={repo.name} description={repo.description} url={repo.html_url} key={index} />
+					);
+				});
 				return(
 					<div>
-						REPOS
+						<h2 className="page-header">Latest Repos</h2>
+						{repoNodes}
+					</div>
+				)
+			}
+		});
+
+		var Repo = React.createClass({
+			render: function() {
+				return(
+					<div>
+						<h4 className="page-header"><a target="_blank" href={this.props.url}>{this.props.name}</a></h4>
+						<p>{this.props.description}</p>
 					</div>
 				)
 			}
