--- a/client/index.html
+++ b/client/index.html
@@ -56,7 +56,7 @@
 			},
 			loadRepoData: function() {
 				$.ajax({
-					url: this.props.urls.user + '/' + this.state.username + '/repos?per_page=' + this.props.perPage + 'client_id=' + this.props.clientId + '&client_secret=' + this.props.clientSecret + '&sort=created',
+					url: this.props.urls.user + '/' + this.state.username + '/repos?per_page=' + this.props.perPage + '&client_id=' + this.props.clientId + '&client_secret=' + this.props.clientSecret + '&sort=created',
 					dataType: 'json',
 					cache: false,
 					success: function(data) {
@@ -137,7 +137,7 @@
 		var Repo = React.createClass({
 			render: function() {
 				return(
-					<div>
+					<div className="repoItem">
 						<h4 className="page-header"><a target="_blank" href={this.props.url}>{this.props.name}</a></h4>
 						<p>{this.props.description}</p>
 					</div>
