Adds search functionality

--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,12 @@
 
 	<script type="text/babel">
 		var Profile = React.createClass({
+			handleFormSubmit: function(username) {
+				this.setState({username: username}, function() {
+					this.loadUserData();
+					this.loadRepoData();
+				})
+			},
 			getDefaultProps: function() {
 				return {
 					clientId: config.MY_KEY,
@@ -75,7 +81,7 @@
 			render: function() {
 				return(
 					<div>
-						<SearchForm />
+						<SearchForm onFormSubmit={this.handleFormSubmit}/>
 						<UserInfo userData={this.state.userData}/>
 						<Repos repoData={this.state.repoData}/>
 					</div>
@@ -147,6 +153,16 @@
 		});
 
 		var SearchForm = React.createClass({
+			submitForm: function(e) {
+				e.preventDefault();
+				var username = this.refs.username.value.trim();
+				if(!username) {
+					alert('Please Enter User');
+					return;
+				}
+				this.props.onFormSubmit(username);
+				this.refs.username.value = '';
+			},
 			render: function() {
 				return(
 					<form onSubmit={this.submitForm} className="form-inline">
